--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,6 +27,9 @@ jobs:
         otp: ["23.3.4.18", "24.3.4.10"]
         elixir: ["1.12.3", "1.13.4", "1.14.4"]
         include:
+          # Only Elixir 1.15 supports OTP 26
+          - otp: "26.0.2"
+            elixir: "1.15.4"
           # Only Elixir 1.14 supports OTP 25
           - otp: "25.3"
             elixir: "1.14.4"
